--- a/project/index.html
+++ b/project/index.html
@@ -19,6 +19,11 @@
     <link rel="stylesheet" href="vendor/animate_it/animate.css">
     <link rel="stylesheet" href="css/style.css">
 
+    <style>
+        body{
+            scroll-behavior: smooth;
+        }
+    </style>
 </head>
 
 <body>
@@ -31,8 +36,11 @@
                     <div class="col-12">
                         <div class="">
                             <nav class="navbar navbar-expand-lg navbar-light ">
-                                <a class="navbar-brand wow hinge" href="#">
-                                    <img src="images/default-logo.png" alt="">
+                                <a class="navbar-brand " href="#">
+                                   <div class="d-flex align-items-center">
+                                       <img src="images/code.png" class="main-logo mr-2" alt="">
+                                      <p class="mb-0 text-primary h5">Web Service</p>
+                                   </div>
                                 </a>
                                 <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                <i class="fa fa-bars fa-2x menu-icon"></i>
@@ -373,7 +381,8 @@
                                        <button class="btn savebtn text-light rounded-pill px-3 "><p class="mb-0 savetext"> SAVE 25%</p></button>
                                    </div>
                                    <div class="d-flex ">
-                                       <h1 class="text-primary display-3 font-weight-bolder my-5">$9</h1>
+                                       <h1 class="text-primary display-3 font-weight-bolder my-5 ">$9</h1>
+
                                        <h4 class=" my-5 pt-5 text-primary font-weight-bold ">/month</h4>
                                    </div>
                                     <button class="btn btn-primary py-3 px-3 d-flex align-items-center justify-content-center black-btn shadow">
@@ -629,10 +638,12 @@
     <script src="vendor/slick-1.8.1/slick-1.8.1/slick/slick.min.js"></script>
     <script src="vendor/wow/wow.js"></script>
     <script src="vendor/way_point/jquery.waypoints.js"></script>
+    <script src="vendor/counter_up/counter_up.js"></script>
     <script src="js/app.js"></script>
 
 
     <script>
+
         new WOW().init()
         $('.pricing-slide').slick({
             dots: true,
